src/objects/Time_Sheet_Activity__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Timesheet Activities</relationshipLabel>
        <relationshipName>Timesheet_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Activity_Type__c</fullName>
        <label>Activity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Client Facing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-Client Facing</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fri__c</fullName>
        <label>Fri</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Industry_Class__c</fullName>
        <label>Industry Class</label>
        <picklist>
            <picklistValues>
                <fullName>Equities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit &amp; Fixed Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AIM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Risk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commodities &amp; Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wealth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mon__c</fullName>
        <label>Mon</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Timesheet Activities</relationshipLabel>
        <relationshipName>Timesheet_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sat__c</fullName>
        <label>Sat</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sub_Activity_Type__c</fullName>
        <label>Sub-Activity Type</label>
        <picklist>
            <controllingField>Activity_Type__c</controllingField>
            <picklistValues>
                <fullName>Demo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trouble Shooting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Displacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Visit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advisory</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal meetings</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Training/workshop/seminar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal emails</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TRUST</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Tech issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal follow ups</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sun__c</fullName>
        <label>Sun</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Thur__c</fullName>
        <label>Thur</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timesheet__c</fullName>
        <label>Timesheet</label>
        <referenceTo>Timesheet__c</referenceTo>
        <relationshipLabel>Timesheet Activities</relationshipLabel>
        <relationshipName>Timesheet_Activities</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Total_Line_Activity__c</fullName>
        <formula>Mon__c +  Tue__c + Wed__c + Thur__c + Fri__c + Sat__c + Sun__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Line Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tue__c</fullName>
        <label>Tue</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Wed__c</fullName>
        <label>Wed</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Timesheet Activity</label>
    <nameField>
        <displayFormat>TSI-{00000}{YYYY}</displayFormat>
        <label>Time Sheet Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Timesheet Activities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Fri_Greater_than_24</fullName>
        <active>true</active>
        <errorConditionFormula>Fri__c &gt; 24</errorConditionFormula>
        <errorDisplayField>Fri__c</errorDisplayField>
        <errorMessage>Cannot exceed 24 hrs</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mon_Greater_than_24</fullName>
        <active>true</active>
        <errorConditionFormula>Mon__c &gt; 24</errorConditionFormula>
        <errorDisplayField>Mon__c</errorDisplayField>
        <errorMessage>Cannot exceed 24 hrs</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sat_Greater_than_24</fullName>
        <active>true</active>
        <errorConditionFormula>Sat__c &gt; 24</errorConditionFormula>
        <errorDisplayField>Sat__c</errorDisplayField>
        <errorMessage>Cannot exceed 24 hrs</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sun_Greater_than_24</fullName>
        <active>true</active>
        <errorConditionFormula>Sun__c &gt; 24</errorConditionFormula>
        <errorDisplayField>Sun__c</errorDisplayField>
        <errorMessage>Cannot exceed 24 hrs</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Thurs_Greater_than_24</fullName>
        <active>true</active>
        <errorConditionFormula>Thur__c &gt; 24</errorConditionFormula>
        <errorDisplayField>Thur__c</errorDisplayField>
        <errorMessage>Cannot exceed 24 hrs</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Tue_Greater_than_24</fullName>
        <active>true</active>
        <errorConditionFormula>Tue__c &gt; 24</errorConditionFormula>
        <errorDisplayField>Tue__c</errorDisplayField>
        <errorMessage>Cannot exceed 24 hrs</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Weds_Greater_than_24</fullName>
        <active>true</active>
        <errorConditionFormula>Wed__c &gt; 24</errorConditionFormula>
        <errorDisplayField>Wed__c</errorDisplayField>
        <errorMessage>Cannot exceed 24 hrs</errorMessage>
    </validationRules>
</CustomObject>